[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -10,7 +10,7 @@
     
     max-width: 900px;
     margin: 0 auto :
-    color:black ;
+    color:red;
     font-family: verdana;
     padding-right: 10px;
     padding-left: 10px;
