[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -11,7 +11,7 @@
             <a href="/">home</a>
         </div>
         <hr/>
-        <h5>Article One</h5>
+        <h5>Article Two </h5>
         
         <div>
             date 
