--- a/ui/index.html
+++ b/ui/index.html
@@ -14,6 +14,9 @@
             
             
         </div>
+        <sript>
+            alert(i am so cool than you);
+        </sript>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
