[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -15,7 +15,7 @@
             
         </div>
         <sript>
-            alert(i am so cool than you);
+            alert(`i am so cool than you`);
         </sript>
         <script type="text/javascript" src="/ui/main.js">
         </script>
