[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -14,9 +14,9 @@
             
             
         </div>
-        <sript>
+        <script>
             alert(`i am so cool than you`);
-        </sript>
+        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
