--- a/ui/index.html
+++ b/ui/index.html
@@ -5,8 +5,9 @@
     </head>
     <body>
         <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
-        </div>
+            <img src="" class="img-medium"/>
+        </div> 
+        // /ui/madi.png //
         <br>
         <div class="center text-big bold">
             Hi! This is  manoj's  webapp.
