[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -7,7 +7,7 @@
         <div class="center">
             <img src="" class="img-medium"/>
         </div> 
-        <!-- /ui/madi.png >
+        <!-- /ui/madi.png -->
         <br>
         <div class="center text-big bold">
             Hi! This is  manoj's  webapp.
