--- a/ui/index.html
+++ b/ui/index.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <div class="center">
-            <img src="" class="img-medium"/>
+            <img src="https://vignette.wikia.nocookie.net/cartoons/images/9/93/Kick_buttowski.png/revision/latest?cb=20130317040312" class="img-medium"/>
         </div> 
         <!-- /ui/madi.png -->
         <br>
