[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -5,8 +5,10 @@
     </head>
     <body>
         <div class="center">
-            <img src="https://vignette.wikia.nocookie.net/cartoons/images/9/93/Kick_buttowski.png/revision/latest?cb=20130317040312" class="img-medium"/>
+            <img id="image" src="https://vignette.wikia.nocookie.net/cartoons/images/9/93/Kick_buttowski.png/revision/latest?cb=20130317040312" class="img-medium"/>
         </div> 
+        <hr/>
+        
         <!-- /ui/madi.png -->
         <br>
         <div class="center text-big bold">
